# fast-sentiment

./: PORTFOLIO.md  README.md
app/: Dockerfile  pyproject.toml
app/src/: main.py  sentiment_predict.py
app/tests/: test_api.py
deployment/: docker-compose.yml
deployment/kubernetes/: api.yaml  ingress.yaml  kustomization.yaml  redis.yaml
deployment/scripts/: build.sh  deploy.sh
load-testing/: README.md  load.js
model/: .gitignore  README.md
